fix overflow with textual content

--- a/lizard_ui/static/bootstrap/less/bootstrap.css
+++ b/lizard_ui/static/bootstrap/less/bootstrap.css
@@ -3944,7 +3944,7 @@ body {
   padding-right: 13px;
 }
 #content {
-  overflow: hidden;
+  overflow: auto;
   position: absolute;
   left: 0;
   right: 0;
