--- a/lizard_ui/static/lizard_ui/lizard-bootstrap.less
+++ b/lizard_ui/static/lizard_ui/lizard-bootstrap.less
@@ -135,7 +135,7 @@ body {
 // The main content area sits between the horizontal bars, next to the
 // sidebar.
 #content {
-  overflow: hidden;
+  overflow: auto;
   position: absolute;
   left: 0;
   right: 0;
